k8s/getter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getter-deployment
  labels:
    app: getter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: getter
  template:
    metadata:
      labels:
        app: getter
    spec:
      containers:
        - name: getter
          image: mmicalt/multicontainer_api_getter
          ports:
            - containerPort: 3001
