k8s/setter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: setter-deployment
  labels:
    app: setter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: setter
  template:
    metadata:
      labels:
        app: setter
    spec:
      containers:
        - name: setter
          image: mmicalt/multicontainer_api_setter
          ports:
            - containerPort: 3002
