k8s/client-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-service
spec:
  selector:
    app: client
  ports:
      - port: 3000
