k8s/getter-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getter-cluster-service
spec:
  selector:
    app: getter
  ports:
    - port: 3001
      targetPort: 3001
