k8s/postgres-cluster-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: postgres-cluster-service
spec:
  type: ClusterIP
  selector: 
    component: postgres
  ports: 
    - port: 5432
      targetPort: 5432
