k8s/redis-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  selector:
    app: redis
  ports:
    - port: 6379
