k8s/setter-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: setter-cluster-service
spec:
  selector:
    app: setter
  ports:
    - port: 3002
      targetPort: 3002
